# Vendored from crates.io `tauri-plugin-libmpv` 0.3.2 (upstream nini22P/tauri-plugin-libmpv, MPL-2.0).
# Vendored so the Linux target can swap the `--wid` embed for a render-API embed (src/desktop_linux.rs)
# while Windows/macOS keep the upstream `--wid` path byte-for-byte. See memory/planned/flowvid-linux-release-plan.md.
[package]
name = "tauri-plugin-libmpv"
version = "0.3.2"
authors = ["22"]
description = "A Tauri plugin for embedding the mpv player in your app via libmpv."
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"
repository = "https://github.com/nini22P/tauri-plugin-libmpv"
keywords = ["tauri", "plugin", "mpv", "media", "player"]
categories = ["multimedia", "gui"]
readme = "README.md"
links = "tauri-plugin-libmpv"

[dependencies]
tauri = { version = "2.9.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
raw-window-handle = "0.6.2"
log = "0.4.28"
libc = "0.2.177"
base64 = "0.22.1"
scopeguard = "1.2.0"
indexmap = { version = "2.12.1", features = ["serde"] }
libloading = "0.8.9"
once_cell = "1.21.3"

# Linux render-API embed dependencies (see src/desktop_linux.rs). GTK3 to match Tauri v2's
# webkit2gtk-4.1 stack; epoxy for GL proc addresses. The mpv client + render API is called
# through FlowVid's own ISC-licensed bindings (src/mpv_sys.rs) linked against the LGPL
# libmpv.so (see build.rs) — NOT the LGPL-2.1 libmpv2/libmpv2-sys crates, so nothing LGPL is
# statically linked into the proprietary binary.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"
epoxy = "0.1"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
